# rig_chatbot_project

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  index.css  main.rs  tool.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  tool.rs
